k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-service
  template:
    metadata:
      labels:
        app: poll-service
    spec:
      containers:
      - name: poll-service
        image: huihfzioj/poll-service:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
