k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  type: NodePort
  selector:
    app: poll-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
